# OkLab-Floyd-Steinberg-Dithering

./: .gitignore  CMakeLists.txt  README.md  palettes.json  settings.json
data/: grayscale.palette  minecraft_map_base.palette  minecraft_map_f.palette  minecraft_map_flat.palette  minecraft_map_grayscale_base.palette  minecraft_map_grayscale_flat.palette  minecraft_map_grayscale_staircase.palette  minecraft_map_gs_b.palette  minecraft_map_gs_f.palette  minecraft_map_gs_sc.palette  minecraft_map_sc.palette  minecraft_map_staircase.palette  minecraft_wool.palette  minecraft_wool_b.palette  minecraft_wool_f.palette  normal.json  settings.json
data/old/: gameboy_original.palette  minecraft_map_b.palette  minecraft_map_sc.palette  minecraft_wool_sc.palette
ext/stb/: stb_image.h
src/: main.cpp  main.h
src/colorSpaces/: ColorSpace.h  ColorSpace.hpp  OkLCh.cpp  OkLCh.h  OkLab.cpp  OkLab.h  sRGB.cpp  sRGB.h  sRGB.hpp
src/image/: Image.cpp  Image.h
src/maths/: Maths.hpp  Matrix.cpp  Matrix.h
src/other/: Log.cpp  Log.h  Pseudo2DArray.hpp
